wandb/run-20240311_175022-a6ewsamh/files/output.log
Nr of Trainable Params on cuda:   99009
> /home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py(168)forward()
-> out = self.nn(x.cuda()).cuda()
  0%|                                                                                                                         | 0/18627 [00:00<?, ?it/s]
*** RuntimeError: Given groups=1, weight of size [32, 2, 3, 3, 3], expected input[1, 16, 2, 32, 64] to have 2 channels, but got 16 channels instead
*** SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*** SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
torch.Size([32, 16, 32, 64])
GatedConv(
  (net): Sequential(
    (0): Conv3d(32, 32, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1))
    (1): ConcatRELU()
    (2): Conv3d(64, 64, kernel_size=(1, 1, 1), stride=(1, 1, 1))
  )
)
*** RuntimeError: Given groups=1, weight of size [64, 64, 1, 1, 1], expected input[1, 32, 32, 32, 64] to have 64 channels, but got 32 channels instead
*** RuntimeError: Given groups=1, weight of size [32, 32, 3, 3, 3], expected input[1, 16, 32, 32, 64] to have 32 channels, but got 16 channels instead
  0%|                                                                                                                         | 0/18627 [02:52<?, ?it/s]
Traceback (most recent call last):
  File "/home/christina/Documents/climsim_ds/main.py", line 354, in <module>
    main(args)
  File "/home/christina/Documents/climsim_ds/main.py", line 153, in main
    trainer_stdiff.trainer(args=args, train_loader=train_loader,
  File "/home/christina/Documents/climsim_ds/optimization/trainer_stdiff.py", line 88, in trainer
    out = model.forward(x=x_past)
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 70, in forward
    h,c = self.convLSTMcell(x[:,:,time_step],(h,c))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1501, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 107, in forward
    out = self.gated_conv_net(X).cuda()
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1501, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 168, in forward
    out = self.nn[0](x.permute(1,0,2,3))
          ^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 90, in trace_dispatch
    return self.dispatch_line(frame)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 115, in dispatch_line
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit
Traceback (most recent call last):
  File "/home/christina/Documents/climsim_ds/main.py", line 354, in <module>
    main(args)
  File "/home/christina/Documents/climsim_ds/main.py", line 153, in main
    trainer_stdiff.trainer(args=args, train_loader=train_loader,
  File "/home/christina/Documents/climsim_ds/optimization/trainer_stdiff.py", line 88, in trainer
    out = model.forward(x=x_past)
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 70, in forward
    h,c = self.convLSTMcell(x[:,:,time_step],(h,c))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1501, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 107, in forward
    out = self.gated_conv_net(X).cuda()
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1501, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/Documents/climsim_ds/models/architectures/conv_lstm_diff.py", line 168, in forward
    out = self.nn[0](x.permute(1,0,2,3))
          ^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 90, in trace_dispatch
    return self.dispatch_line(frame)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 115, in dispatch_line
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit